--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,12 +23,19 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  english_words: ^3.1.0
+
+  # Add Flutter Launch icons
+  flutter_launcher_icons: "^0.7.0"
+
+  # Add the bluetooth dependency from FlutterBlue
+  # flutter_blue: "^0.6.3"
+
+  # Open links and other applications
+  url_launcher: ^5.2.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: "^0.7.0"
 
 
 # Flutter icons setup
@@ -37,6 +44,9 @@ flutter_icons:
   android: true
   image_path_ios: "assets/app_icons/ios/iTunesArtwork@2x.png"
   image_path_android: "assets/app_icons/android/playstore-icon.png"
+
+  # Add the bluetooth dependency from FlutterBlue
+  # flutter_blue: "^0.6.3"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
