--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,8 @@ dependencies:
     sdk: flutter
 
   # Add SQLite database support.
-  sqflite: any
-  path_provider: any
+  sqflite:
+  path:
 
 
   # The following adds the Cupertino Icons font to your application.
