--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,9 +11,10 @@ dependencies:
     sdk: flutter
 
   # Add SQLite database support.
-  sqflite:
-  path:
-
+  sqflite: ^1.2.0
+  path: any
+  path_provider: any
+  intl: ^0.16.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
