--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,10 @@ dependencies:
   # flutter_blue: "^0.6.3"
 
   # Open links and other applications
-  url_launcher: ^5.2.5
+  url_launcher: "^5.2.5"
+
+  # Expandable panel for Help page
+  expandable: "^4.1.2"
 
   # Create better Singleton management using GetIt
   # TODO: Using version V2 of flutter requires more specialized
