--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,9 @@ dependencies:
   sqflite: ^1.2.0
   path: any
   path_provider: any
-  intl: ^0.16.1
+
+  # TODO: figure out what this did
+  #intl: ^0.16.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -33,8 +35,6 @@ dependencies:
   expandable: "^4.1.2"
 
   # Create better Singleton management using GetIt
-  # TODO: Using version V2 of flutter requires more specialized
-  # TODO: GetIt commands so ensure that these are implemented correctly!
   get_it: ^3.1.0
 
   # Write useful logging for debugging of application
