--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: Helios truck trailer compatibility testing module.
 version: 1.0.0
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.3.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -15,8 +15,8 @@ dependencies:
   path: any
   path_provider: any
 
-  # TODO: figure out what this did
-  #intl: ^0.16.1
+  # Process Date and Time
+  intl: ^0.16.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -42,6 +42,15 @@ dependencies:
 
   # Dartdoc Documentation Generator
   dartdoc: ^0.30.0+1
+
+  # Interface with DUET
+  http: ^0.12.0+4
+
+  # Get deployment info
+  package_info: ^0.4.0+13
+
+  # Generate UUID strings
+  uuid: ^2.0.4
 
 dev_dependencies:
   flutter_test:
