--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,8 @@ dependencies:
   flutter_launcher_icons: "^0.7.0"
 
   # Add the bluetooth dependency from FlutterBlue
-  # flutter_blue: "^0.6.3"
+  #flutter_blue: "0.4.1"
+  flutter_blue: 0.6.3+1
 
   # Open links and other applications
   url_launcher: "^5.2.5"
