--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,7 @@ dependencies:
   dartdoc: ^0.30.0+1
 
   # Interface with DUET
-  http: ^0.12.0+4
+  http: ^0.13.3
 
   # Get deployment info
   package_info: ^0.4.0+13
